  show statistics and query plan for an SQL query.
  Thanks to Martin Weissenborn for the Cache specific requirements

New SQL editor function to delete the current SQL statement.
  Accessible by short cut Ctrl+Shift+Del, tools popup, right mouse menu.
  Note: Corresponding functions to copy (Ctrl+Shift+x) and cut (Ctrl+Shift+x) already exist.


Bug fixes:

Hibernate Plugin: Mapped enum constants are now displayed by their name instead of their toString() value.

SQL editor: Parser (JSqlParser) raised NullPointerException
  when the editor contained "DELETE FROM " without a table name.

Hibernate Plugin: Fixed NullPointer in the "Object tree representation" of HQL query results.

HXTT Drivers: MS Excel tables were not displayed.

Error handling: In some exception stack traces were not logged.

Data import Plugin: Fixed date format validation check.

Paste history (ctrl +shift + v or insert): When an entry is selected to paste it is made the current clipboard content.

Data import Plugin: An invalid date format in the "Import file settings" dialog led to errors in the subsequent import dialog.

#1492 The SQL editors "Find in Object Tree" function (ctrl+B) and Object Tree search did not respect the current schema.
  Some (not yet all) databases support the JDBC API function to read the current schema.
  If so SQuirreL shows the current schema in its Session status bar.
  Now SQuirreL also respects the current schema when searching the Object Tree.
  I.e. if the same table name exists in two schemas SQuirreL preferably finds the one in the current schema.


Hibernate Plugin: Prevented HQL execution error when
  - a mapped collection-attribute wasn't an instance of java.util.Collection
  - the toString() method of a mapped object raised an exception

Intersystem Cache Plugin bug fix: Whenever a new Session was opened another Session menu items was added.

SQL result's find function -->  Color matches: "No resource found ..." message in coloring dialog's title.
